--- a/webBanTiVi/src/main/resources/templates/admin/page/evaluate/evaluate.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/evaluate/evaluate.html
@@ -1,4 +1,4 @@
-<h4 class="fw-semibold py-3 mb-4"> Đánh giá sản phẩm: <span th:text="${product.nameProduct}"></span></h4>
+<h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light"><a class="text-muted fw-light" href="/admin/product/list">Danh sách sản phẩm/</a></span>Đánh giá: <span th:text="${product.nameProduct}"></span></h4>
 <div class="card mb-3 ">
     <div class="card-header">
         <form class="col-12 mt-2">
