--- a/webBanTiVi/src/main/resources/templates/user/page/product/detail.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/detail.html
@@ -190,63 +190,122 @@
 
         </div>
         <div class="col-md-6">
-            <div class="card"><br>
+            <div class="card">
                 <div class="card-header">
-                    <h3>
-                        Đánh Giá <span th:text="${product.product.nameProduct}"></span>
+                    <h3 class="mb-4">
+                        Đánh Giá <span th:text="${product.product.nameProduct+' '+product.product.sku}"></span>
                     </h3>
+                    <div class="row">
+                        <div>
+                            <i th:class="|${product.product.avgPoint == 0 ? 'bx bx-star bx-md': product.product.avgPoint > 0 && product.product.avgPoint < 1 ? 'bx bxs-star-half bx-md':'bx bxs-star bx-md'}|"
+                               style='color:#fdb602'></i>
+                            <i th:class="|${product.product.avgPoint <=1 ? 'bx bx-star bx-md': product.product.avgPoint > 1 && product.product.avgPoint < 2 ? 'bx bxs-star-half bx-md':'bx bxs-star bx-md'}|"
+                               style='color:#fdb602'></i>
+                            <i th:class="|${product.product.avgPoint <=2 ? 'bx bx-star bx-md': product.product.avgPoint > 2 && product.product.avgPoint < 3 ? 'bx bxs-star-half bx-md':'bx bxs-star bx-md'}|"
+                               style='color:#fdb602'></i>
+                            <i th:class="|${product.product.avgPoint <=3 ? 'bx bx-star bx-md': product.product.avgPoint > 3 && product.product.avgPoint < 4 ? 'bx bxs-star-half bx-md':'bx bxs-star bx-md'}|"
+                               style='color:#fdb602'></i>
+                            <i th:class="|${product.product.avgPoint <=4 ? 'bx bx-star bx-md': product.product.avgPoint > 4 && product.product.avgPoint < 5 ? 'bx bxs-star-half bx-md':'bx bxs-star bx-md'}|"
+                               style='color:#fdb602'></i>
+                        </div>
+                        <div>
+                            <span class="fs-3" th:text="${product.product.avgPoint}"></span>
+                            <span class="fs-5 mx-2"
+                                  th:text="|${#lists.size(product.product.listEvaluate)} đánh giá|"></span>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-body">
-                    <span class="fs-5" th:each="item: ${product.product.listEvaluate}">
-                                        <strong th:text="${item.customer.name}"></strong>
+                    <div th:each="item,itemStat: ${product.product.listEvaluate}" th:if="${itemStat.index<3}">
+                    <span class="fs-5"><strong th:text="${item.customer.name}"></strong>
                                         </span>
-                    <p th:each="item: ${product.product.listEvaluate}">
-                        <i class='bx bxs-star' style='color:#ffff00'></i>
-                        <i class='bx bxs-star' style='color:#ffff00'></i>
-                        <i class='bx bxs-star' style='color:#ffff00'></i>
-                        <i class='bx bxs-star' style='color:#ffff00'></i>
-                        <i class='bx bxs-star-half' style='color:#ffff00'></i>
-                        <span th:text="${item.point}"></span>
-                    </p>
-                    <p th:each="item: ${product.product.listEvaluate}">
-                        <span th:text="${item.comment}"></span> <br>
-                        <small class="text-muted">
-                            <span th:text="${item.dateCreate}"></span>
-                        </small>
-                    </p>
+                        <div>
+                            <p>
+                                <i th:class="|${item.point >=1 ? 'bx bxs-star':'bx bx-star'}|"
+                                   style='color:#fdb602'></i>
+                                <i th:class="|${item.point >=2 ? 'bx bxs-star':'bx bx-star'}|"
+                                   style='color:#fdb602'></i>
+                                <i th:class="|${item.point >=3 ? 'bx bxs-star':'bx bx-star'}|"
+                                   style='color:#fdb602'></i>
+                                <i th:class="|${item.point >=4 ? 'bx bxs-star':'bx bx-star'}|"
+                                   style='color:#fdb602'></i>
+                                <i th:class="|${item.point >=5 ? 'bx bxs-star':'bx bx-star'}|"
+                                   style='color:#fdb602'></i>
+                            </p>
+                            <p>
+                                <span th:text="${item.comment}"></span> <br>
+                                <small class="text-muted">
+                                    <span th:text="${item.dateCreate}"></span>
+                                </small>
+                            </p>
+                        </div>
+                        <div>
+                            <img th:each="img:${item.evaluateList}" th:src="|/image/product/${img.nameImage}|"
+                                 alt="Ảnh bị lỗi" class="w-px-100">
+                        </div>
+                        <hr>
+                    </div>
                 </div>
                 <div class="card-footer text-center">
-                    <button class="btn btn-primary w-50" data-bs-target="#writeEvaluate" data-bs-toggle="modal">Viết đánh giá</button>
+
+                    <div>
+                        <div>
+                            <a th:href="|/product/evaluate/${productAll.id}|" class="btn btn-outline-secondary"
+                               style="width: 40%">
+                                Xem tất cả đánh giá([(${#lists.size(product.product.listEvaluate)})])
+                            </a>
+                            <button class="btn btn-primary" style="width: 40%" data-bs-target="#writeEvaluate"
+                                    data-bs-toggle="modal" th:if="${session.user == true}">
+                                Viết đánh giá
+                            </button>
+                        </div>
+                        <small  th:if="${session.user != true}">Bạn cần đăng nhập để đánh giá</small>
+
+
+                    </div>
                     <div class="modal fade" id="writeEvaluate" tabindex="-1" aria-modal="true" role="dialog">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel1">Modal title</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    <h5 class="modal-title" id="exampleModalLabel1">Đánh giá</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" id="close"
+                                            aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <div class="row">
-                                        <div class="col mb-3">
-                                            <label for="nameBasic" class="form-label">Name</label>
-                                            <input type="text" id="nameBasic" class="form-control" placeholder="Enter Name">
-                                        </div>
+                                    <div class="mb-3 row">
+                                        <span th:text="${product.product.nameProduct + ' '+product.product.sku}"></span>
                                     </div>
-                                    <div class="row g-2">
-                                        <div class="col mb-0">
-                                            <label for="emailBasic" class="form-label">Email</label>
-                                            <input type="text" id="emailBasic" class="form-control" placeholder="xxxx@xxx.xx">
-                                        </div>
-                                        <div class="col mb-0">
-                                            <label for="dobBasic" class="form-label">DOB</label>
-                                            <input type="text" id="dobBasic" class="form-control" placeholder="DD / MM / YY">
-                                        </div>
+                                    <div class="mb-3 row">
+                                        <p>
+                                            <i class='bx bx-star bx-lg star1 point' style='color:#fdb602'></i>
+                                            <i class='bx bx-star bx-lg star2 point' style='color:#fdb602'></i>
+                                            <i class='bx bx-star bx-lg star3 point' style='color:#fdb602'></i>
+                                            <i class='bx bx-star bx-lg star4 point' style='color:#fdb602'></i>
+                                            <i class='bx bx-star bx-lg star5 point' style='color:#fdb602'></i>
+                                        </p>
+                                    </div>
+                                    <div class="mb-3 row">
+                                        <textarea type="text" class="form-control" id="comment"
+                                                  placeholder="Viết cảm nhận ở đây"></textarea>
+                                    </div>
+                                    <div class="mb-3">
+                                        <p>Hình ảnh thực tế</p>
+                                        <img th:src="@{'/image/tivi1.jpg'}"
+                                             class="w-px-100 image-preview cursor-pointer" alt="Chưa chọn ảnh">
+                                        <input class="file-input" hidden="hidden" type="file">
+                                        <img th:src="@{'/image/tivi1.jpg'}"
+                                             class="w-px-100 image-preview cursor-pointer" alt="Chưa chọn ảnh">
+                                        <input class="file-input" hidden="hidden" type="file">
+                                        <img th:src="@{'/image/tivi1.jpg'}"
+                                             class="w-px-100 image-preview cursor-pointer" alt="Chưa chọn ảnh">
+                                        <input class="file-input" hidden="hidden" type="file">
+
                                     </div>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
-                                        Close
+                                    <button type="button" class="btn btn-primary" id="sendEvaluate"
+                                            th:value="${product.product.id}">Lưu
                                     </button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
                                 </div>
                             </div>
                         </div>
@@ -255,93 +314,11 @@
             </div>
         </div>
     </section>
-    <!--    <section class="related spad mt-5">-->
-    <!--        <div class="container">-->
-    <!--            <div class="row">-->
-    <!--                <div class="col-lg-12" style="text-align: center">-->
-    <!--                    <h3 class="related-title">Related Product</h3>-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--            <br>-->
-    <!--            &lt;!&ndash;            <div class="row mb-5">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                <div class="col-md-6 col-lg-3 mb-5" th:each="pro:${listPro}">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                    <div class="card h-100">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                        <div class="card-body">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                            <div class="">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                <br>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                <span th:each="image:${pro.listImage}">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <img th:if="${image.location == true}"&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                         th:src="@{'/image/'+${image.link}}"&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                         alt="" width="100%">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                </span>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                <span class="fs-5">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <p th:text="${pro.product.nameProduct}"></p>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                </span>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                <span class="fs-5">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <p th:text="${pro.priceImport}"></p>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                </span>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                <div class="product__color__select">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <label for="pc-1">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                        <input type="radio" >&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    </label>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <label class="active black" for="pc-2">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                        <input type="radio" >&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    </label>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <label class="grey" for="pc-3">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                        <input type="radio" >&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    </label>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                <div class="rating">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <i class='bx bxs-star' style='color:#ffff00'></i>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <i class='bx bxs-star' style='color:#ffff00'></i>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <i class='bx bxs-star' style='color:#ffff00'></i>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <i class='bx bxs-star-half' style='color:#ffff00'></i>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <i class='bx bxs-star' undefined></i>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                            </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                            <br>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                            <a th:href="@{/cart/add/{id}(id=${product.id})}" class="btn btn-outline-primary">+ Add To&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                Cart</a>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                        </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                <div class="col-md-6 col-lg-3">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                    <div class="card h-100">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                        <img class="card-img-top" src="../assets/img/elements/2.jpg" alt="Card image cap">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                        <div class="card-body">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                            <div class="product__item__text">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                <span class="fs-5">Ti Vi Samsung</span>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                <div class="rating">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <i class="fa fa-star-o"></i>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <i class="fa fa-star-o"></i>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <i class="fa fa-star-o"></i>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <i class="fa fa-star-o"></i>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <i class="fa fa-star-o"></i>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                <span class="fs-5">$67.24</span>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                <div class="product__color__select">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <label for="pc-1">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                        <input type="radio" id="pc-1">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    </label>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <label class="active black" for="pc-2">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                        <input type="radio" id="pc-2">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    </label>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    <label class="grey" for="pc-3">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                        <input type="radio" id="pc-3">&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                    </label>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                                </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                            </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                            <a href="javascript:void(0)" class="btn btn-outline-primary">+ Add To Cart</a>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                        </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;                </div>&ndash;&gt;-->
-    <!--            &lt;!&ndash;            </div>&ndash;&gt;-->
-    <!--        </div>-->
-    <!--    </section>-->
 </div>
 <br>
 </html>
 <script>
+    var point = 0;
     if (document.getElementById("message").textContent == 'true') {
         const Toast = Swal.mixin({
             toast: true,
@@ -407,4 +384,8 @@
                 totalPriceForm[index].innerText = totalPrice
             })
         })
-    )</script>
+    )
+
+</script>
+<script src="/admin/plugin/js/evaluate.js"></script>
+<script src="/admin/plugin/js/loadImage.js"></script>
